[gd_scene load_steps=7 format=3 uid="uid://sq65lne138lp"]

[ext_resource type="Theme" uid="uid://dfelcb10ewua1" path="res://assets/theme.tres" id="1_oljoq"]
[ext_resource type="PackedScene" uid="uid://ccw4qq2b0y87u" path="res://clicker_box.tscn" id="2_6mp7d"]
[ext_resource type="Script" uid="uid://h68460nkq8sa" path="res://clicker_manager.gd" id="2_di3a2"]
[ext_resource type="Texture2D" uid="uid://blmflfgqs5tvc" path="res://assets/goldmine.jpg" id="3_di3a2"]
[ext_resource type="Script" uid="uid://dm6kea7yfwvv6" path="res://box_setter.gd" id="3_i6j1w"]
[ext_resource type="AudioStream" uid="uid://dtkliwfycqer1" path="res://assets/Intro_Fanfare.wav" id="5_bu30o"]

[node name="ClickerManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_oljoq")
script = ExtResource("2_di3a2")
PORTENT_PATH = "res://assets/text/portents.txt"

[node name="ResetPopup" type="PopupMenu" parent="."]
initial_position = 1
size = Vector2i(250, 100)
theme = ExtResource("1_oljoq")
hide_on_item_selection = false
hide_on_checkable_item_selection = false

[node name="Control" type="Control" parent="ResetPopup"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="ResetPopup/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="ResetPopup/Control/MarginContainer"]
layout_mode = 2
action_mode = 0
text = "RESET GAME
(CANNOT BE UNDONE)"

[node name="AudioPopupMenu" type="Popup" parent="."]
title = "VOLUME"
initial_position = 1
size = Vector2i(200, 200)

[node name="Control" type="Control" parent="AudioPopupMenu"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_oljoq")

[node name="MarginContainer" type="MarginContainer" parent="AudioPopupMenu/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="AudioPopupMenu/Control/MarginContainer"]
layout_mode = 2
script = ExtResource("3_i6j1w")

[node name="Label" type="Label" parent="AudioPopupMenu/Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "MASTER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MasterSlider" type="HSlider" parent="AudioPopupMenu/Control/MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.1

[node name="Label2" type="Label" parent="AudioPopupMenu/Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "MUSIC"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicSlider" type="HSlider" parent="AudioPopupMenu/Control/MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.1

[node name="Label3" type="Label" parent="AudioPopupMenu/Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "SFX"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFXSlider" type="HSlider" parent="AudioPopupMenu/Control/MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.1

[node name="Button" type="Button" parent="AudioPopupMenu/Control/MarginContainer/VBoxContainer"]
layout_mode = 2
action_mode = 0
text = "CANCEL"

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.319
anchor_top = 0.196
anchor_right = 0.681
anchor_bottom = 0.804
offset_left = 188.512
offset_top = 176.992
offset_right = -188.512
offset_bottom = -176.992
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="CenterContainer"]
layout_mode = 2
icon = ExtResource("3_di3a2")
icon_alignment = 1

[node name="ClickerListContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
alignment = 1

[node name="ClickerBox" parent="ClickerListContainer" instance=ExtResource("2_6mp7d")]
layout_mode = 2

[node name="ClickerBox2" parent="ClickerListContainer" instance=ExtResource("2_6mp7d")]
layout_mode = 2
type = 1

[node name="ClickerBox3" parent="ClickerListContainer" instance=ExtResource("2_6mp7d")]
layout_mode = 2
type = 2

[node name="ClickerBox4" parent="ClickerListContainer" instance=ExtResource("2_6mp7d")]
layout_mode = 2
type = 3

[node name="ClickerBox5" parent="ClickerListContainer" instance=ExtResource("2_6mp7d")]
layout_mode = 2
type = 4

[node name="MenuContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -92.0
offset_right = 92.0
grow_horizontal = 2
grow_vertical = 0

[node name="PanelContainer" type="PanelContainer" parent="MenuContainer"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -47.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="MenuContainer/PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MenuContainer/PanelContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="ResetButton" type="Button" parent="MenuContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "RESET"

[node name="VolumeButton" type="Button" parent="MenuContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "VOLUME"

[node name="ExitButton" type="Button" parent="MenuContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "EXIT"

[node name="TopContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="PanelContainer" type="PanelContainer" parent="TopContainer"]
custom_minimum_size = Vector2(700, 80)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="TopContainer/PanelContainer"]
layout_mode = 2

[node name="PortentText" type="Label" parent="TopContainer/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "[PORTENTS]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="TopContainer"]
layout_mode = 2
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="TopContainer/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="TopContainer/HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TopContainer/HBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
text = "GOLD:"

[node name="PanelContainer2" type="PanelContainer" parent="TopContainer/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="TopContainer/HBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="GoldLabel" type="Label" parent="TopContainer/HBoxContainer/PanelContainer2/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "###"

[node name="PanelContainer3" type="PanelContainer" parent="TopContainer/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="TopContainer/HBoxContainer/PanelContainer3"]
layout_mode = 2

[node name="RateLabel" type="Label" parent="TopContainer/HBoxContainer/PanelContainer3/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "#/s"

[node name="ScrollContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 184.0
grow_vertical = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer"]
layout_mode = 2
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="ScrollContainer/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer/HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/HBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
text = "SCROLLS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="ScrollContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/PanelContainer/MarginContainer"]
layout_mode = 2
text = "[TEXT]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="ScrollContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer/PanelContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/PanelContainer2/MarginContainer"]
layout_mode = 2
text = "[TEXT]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer3" type="PanelContainer" parent="ScrollContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer/PanelContainer3"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/PanelContainer3/MarginContainer"]
layout_mode = 2
text = "[TEXT]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer4" type="PanelContainer" parent="ScrollContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer/PanelContainer4"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/PanelContainer4/MarginContainer"]
layout_mode = 2
text = "[TEXT]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer5" type="PanelContainer" parent="ScrollContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer/PanelContainer5"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/PanelContainer5/MarginContainer"]
layout_mode = 2
text = "[TEXT]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_bu30o")
autoplay = true
bus = &"Music"

[node name="PortentTimer" type="Timer" parent="."]
autostart = true

[connection signal="pressed" from="ResetPopup/Control/MarginContainer/Button" to="." method="_on_final_reset_button_pressed"]
[connection signal="value_changed" from="AudioPopupMenu/Control/MarginContainer/VBoxContainer/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="AudioPopupMenu/Control/MarginContainer/VBoxContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="AudioPopupMenu/Control/MarginContainer/VBoxContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="AudioPopupMenu/Control/MarginContainer/VBoxContainer/Button" to="." method="_on_popup_button_pressed"]
[connection signal="pressed" from="CenterContainer/Button" to="." method="_on_mine_pressed"]
[connection signal="pressed" from="MenuContainer/PanelContainer/MarginContainer/HBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="MenuContainer/PanelContainer/MarginContainer/HBoxContainer/VolumeButton" to="." method="_on_volume_button_pressed"]
[connection signal="pressed" from="MenuContainer/PanelContainer/MarginContainer/HBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="timeout" from="PortentTimer" to="." method="_on_portent_timer_timeout"]
